# platzky

./: .coveragerc  Makefile  config-template.yml  pyproject.toml  sonar-project.properties
.github/workflows/: python-app.yml  sonarcloud.yml  tests.yml
platzky/: config.py  db_loader.py  default_config.py  engine.py  models.py  platzky.py  plugin_loader.py
platzky/admin/: fake_login.py
platzky/admin/templates/: admin.html  login.html
platzky/blog/: blog.py  db.py  db_loader.py
platzky/db/: db.py  google_json_db.py  graphQl.py  graph_ql_db.py  json_db.py  json_file.py  json_file_db.py
platzky/plugins/redirections/: db.py  entrypoint.py
platzky/plugins/sendmail/: entrypoint.py
platzky/seo/: seo.py
platzky/templates/: 404.html  base.html  blog.html  head_meta.html  macros.html  page.html  post.html
test/: config.json  db.json  test_blog.py
test/e2e_tests/cypress/e2e/: simple_test.cy.js
tests/e2e_tests/: config.json  config.yml  cypress.config.js  db.json  e2e_test_config.yml  e2e_test_data.json
tests/e2e_tests/cypress/e2e/: simple_test.cy.js
tests/unit_tests/: test_blog.py  test_config.py  test_db.py  test_db_loading.py  test_engine.py  test_platzky.py  test_plugin_loader.py
tests/unit_tests/blog/: test_blog.py  test_formatter.py
tests/unit_tests/db/: test_google_json_db.py  test_json_db.py
tests/unit_tests/seo/: test_seo.py
