[tool.poetry]
name = "platzky"
version = "0.1.19"
description = "Another blog in python"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
humanize = "^4.3.0"
Flask = "^2.2.2"
PyYAML = "^6.0"
Flask-Babel = "^4.0.0"
Flask-WTF = "^1.0.1"
gql = "^3.4.0"
aiohttp = "^3.8.3"
Flask-Minify = "^0.39"
google-cloud-storage = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = "^6.4.4"
freezegun = "^1.2.2"
pydantic = "^2.6.1"
black = "^24.1.1"
ruff = "^0.2.1"
pyright = "^1.1.350"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
